--- a/App.Rh/src/main/resources/templates/vaga/listaVaga.html
+++ b/App.Rh/src/main/resources/templates/vaga/listaVaga.html
@@ -38,7 +38,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+						<li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
 						<li class="nav-item"><a class="nav-link" href="/vagas">
 								<< Listar Vagas>>
 							</a></li>
@@ -74,7 +74,7 @@
 			</thead>
 			<tbody>
 				<tr th:each="vaga: ${vagas}">
-					<td><a th:href="${(#mvc.url('VC#detalhesvaga').arg(0, vaga.codigo)).build()}"><span th:text="${vaga.nome}"></span></a></td>
+					<td><a th:href="${(#mvc.url('VC#detalhesVaga').arg(0, vaga.codigo)).build()}"><span th:text="${vaga.nome}"></span></a></td>
 					<td><span th:text="${vaga.descricao}"></span></td>
 					<td>R$ <span th:text="${vaga.salario}"></span></td>
 					<td><span th:text="${vaga.data}"></span></td>
